# IS_BurnedOutDextor

./: .gitignore  README.md  docker-compose.yml
backend/api/: .env.example  Dockerfile  README.md  pyproject.toml
backend/api/app/: config.py  database.py  deps.py  exceptions.py  init_db.py  main.py  security.py  unirepository.py
backend/api/app/controllers/: cr_controller.py  crud_controller.py
backend/api/app/dbmodels/: __init__.py  answer.py  area.py  auth_user.py  company.py  groups.py  psicometric_variable.py  question_surveys.py  questions.py  ranks.py  result.py  survey_assignments.py  surveys.py  workers.py
backend/api/app/models/: __init__.py  answer.py  area.py  base.py  company.py  groups.py  identity_mapping.py  question_surveys.py  questions.py  ranks.py  result.py  surveys.py  workers.py
backend/api/app/routes/: answer_cr_service.py  area_cr_service.py  area_read_service.py  auth_service.py  burnout_routes.py  company_cr_service.py  group_cr_service.py  intervention_routes.py  psicometric_value_r_service.py  question_surveys_crud_service.py  questions_crud_service.py  rank_cr_service.py  result_cr_service.py  survey_assignment_service.py  surveys_cr_service.py  workers_cr_service.py
backend/api/app/schemas/: answer_scheme.py  area_scheme.py  auth_scheme.py  burnout_integration_scheme.py  company_scheme.py  group_scheme.py  intervention_scheme.py  psicometric_variable_scheme.py  question_surveys_scheme.py  questions_scheme.py  rank_scheme.py  result_scheme.py  (+3 more)
backend/api/core/: config.py  security.py
backend/api/data/: data.py
(+165 files in other folders)
